Fixed bootstrap bug: horizontal scrollbar appearing when not needed
Modified bootstrap.css to nclude a dirty fix for the horizontal
scrollbar issue

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -12,6 +12,8 @@ html {
 }
 body {
   margin: 0;
+  overflow-x: hidden;
+
 }
 article,
 aside,
